@@ -38,8 +38,7 @@ function smarty_modifier_replace($string, $search, $replace)
             return $haystack;
         } 
     } 
-    $smarty = Smarty::instance();
-    if ($smarty->has_mb) {
+    if (function_exists('mb_substr')) {
         return mb_str_replace($search, $replace, $string);
     } else {
         return str_replace($search, $replace, $string);
