@@ -21,7 +21,6 @@
 */
 function smarty_modifier_spacify($string, $spacify_char = ' ')
 {
-    $smarty = Smarty::instance();
     return implode($spacify_char, preg_split('//', $string, -1));
 } 
 
